css/style.css
/* ... */
@media (max-width: 1023.98px) {
  .checkbox {
    padding-right: 5vw;
  }

  .checkbox .checkmark {
    height: 3.6vw;
    width: 3.6vw;
  }

  .checkbox .checkmark:after {
    width: 1.6vw;
    height: 1.6vw;
  }
}

/* #Line Under Title
================================================== */
.underline,
.underline-center {
  padding-bottom: 1vw;
  margin-bottom: 1.1vw;
  position: relative;
}

.underline::after,
.underline-center::after {
  content: '';
  position: absolute;
  bottom: 0;
  right: 0;
  height: 2px;
  width: 4.5vw;
  background-color: var(--green);
}

.underline-center::after {
  right: 50%;
  transform: translateX(50%);
}

@media (max-width: 1023.98px) {
  .underline,
  .underline-center {
    padding-bottom: 4vw;
    margin-bottom: 3.75vw;
  }
  
  .underline::after,
  .underline-center::after {
    width: 14.6vw;
    left: 50%!important;
    right: auto!important;
    transform: translateX(-50%)!important;
  }
}

/* #Swiper Arrows
================================================== */
.swiper-button-next, 
.swiper-button-prev {
  width: 2.6vw;
  height: 2.6vw;
  border-radius: 50%;
  margin-top: 0;
  color: white;
  background-color: var(--green);
}

.swiper-button-next:after, 
.swiper-button-prev:after {
  font-size: 0.625vw;
}

.swiper-button-prev, 
.swiper-container-rtl .swiper-button-next {
  left: 0;
  right: auto;
}

.swiper-button-next, 
.swiper-container-rtl .swiper-button-prev {
  right: 0;
  left: auto;
}

@media (max-width: 1023.98px) {
  .swiper-button-next, 
  .swiper-button-prev {
    width: 9.33vw;
    height: 9.33vw;
  }

  .swiper-button-next:after, 
  .swiper-button-prev:after {
    font-size: 2.4vw;
  }

  .swiper-button-prev, 
  .swiper-container-rtl .swiper-button-next {
    left: 0;
  }

  .swiper-button-next, 
  .swiper-container-rtl .swiper-button-prev {
    right: 0;
  }
}

/* #Header
================================================== */
.header {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  padding: 1.15vw 0;
  z-index: 1000;
  background-color: white;
}

.header .container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  max-width: 96%;
}

/* Logo */
.header-logo {
  width: 12.5vw;
}

.header-logo img {
  width: 100%;
}

/* Icons */
.header-arrow {
  width: 0.625vw;
  margin-right: 0.5vw;
}

.header .dropdown.active .header-arrow {
  transform: rotate(180deg);
}

.header-search {
  width: 1.15vw;
}

/* Menu */
.header-menu .dropdown {
  position: relative;
}

.header-menu .dropdown.active ul {
  display: block;
}

.header-menu .dropdown ul {
  display: none;
  position: absolute;
  top: 3.65vw;
  right: 0;
  min-width: 100%;
  width: auto;
  background-color: white;
  padding: 0.7vw 1.3vw;
  line-height: 1.5;
  white-space: nowrap;
}

.header-links > ul {
  display: flex;
  align-items: center;
}

.header-links > ul > li > a {
  border-bottom: 2px solid transparent;
  transition: all .3s ease;
}

.header-links > ul > li > a:hover {
  border-bottom: 2px solid var(--green);
}

.header-links > ul > li:not(:last-child) {
  margin-left: 1vw;
}

.header-links > ul > li > a {
  display: flex;
  justify-content: space-between;
}

/* Contact */
.header-contact {
  display: flex;
}

.header-contact a {
  display: flex;
  align-items: center;
  height: 3.65vw;
}

.header-contact a:first-child {
  margin-left: 1.3vw;
}

.header-contact a.white {
  color: var(--green);
}

.header-contact a.white img {
  margin-left: 0.5vw;
}

.header-contact a.green {
  background-color: var(--green);
  color: white;
  padding: 1.3vw;
  border-radius: 500px;
}

.header-contact a.green img {
  margin-right: 0.5vw;
}

.header-contact img {
  height: 2.3vw;
}

@media (max-width: 1023.98px) {
  .header {
    padding: 2.65vw 0;
  }

  .header .container {
    max-width: 95%;
  }

  .header-logo {
    margin-left: auto;
    width: 26.6vw;
  }

  .header-menu {
    background-color: #777;
    position: fixed;
    top: 14.66vw;
    left: 0;
    width: 100%;
    height: calc(100% - 14.66vw);
    display: none;
    padding: 20vw 0;
    overflow-y: auto;

    background-image: url('../img/global/header-mobile-bg.jpg');
    background-size: cover;
    background-position: top center;
    background-repeat: no-repeat;
  }

  .header.show-menu .header-menu {
    display: block;
  }

  .header-menu .dropdown ul {
    position: static;
    top: 0;
    width: 100%;
    background-color: transparent;
    padding: 3vw 0;
    white-space: normal;
  }

  .header-contact {
    margin-left: 3.33vw;
  }

  .header-contact a {
    height: 9.33vw;
  }

  .header-contact a:first-child {
    margin-left: 3.33vw;
  }

  .header-contact a.green {
    padding: 3.3vw;
  }

  .header-contact a.green img {
    margin-right: 1vw;
  }

  .header-contact img {
    height: 6vw;
  }

  .header-links {
    margin: 0 0 20vw 0;
  }

  .header-links > ul {
    flex-direction: column;
    align-items: stretch;
    color: white;
    width: 75%;
    margin: 0 auto;
  }

  .header-links > ul > li {
    border-bottom: 1px solid white;
    padding: 3.33vw 0;
  }
  
  .header-links > ul > li:not(:last-child) {
    margin-left: 1vw;
  }

  .header-social ul {
    width: 42vw;
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin: 0 auto;
  }

  .header-social img {
    height: 7.3vw;
  }

  .header-plus {
    width: 4vw;
  }
}

/* #Hamburger
================================================== */
@media (max-width: 1023.98px) {
  .header-hamburger {
    display: flex;
    align-items: center;
  }
}

.hamburger {
  font: inherit;
  display: inline-flex;
  align-items: center;
  overflow: visible;
  margin: 0;
  padding: 0;
  cursor: pointer;
  transition-timing-function: linear;
  transition-duration: .3s;
  transition-property: opacity, filter;
  text-transform: none;
  color: inherit;
  border: 0;
  background-color: transparent;
  outline: none!important;
}
/* ... */

